[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dynamo = "dynamo.cli:main"

[project]
version = "0.1.0"
name = "dynamo"
description = "\"A discord bot\""
readme = "README.md"
license = { text = "Unlicense" }
requires-python = "~=3.13.0"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "apsw~=3.49.1.0",
    "discord-py~=2.7.0",
    "dynaconf~=3.3.0.dev0",
    "imagetext-py~=2.2.0",
    "mikeshardmind-async-utils~=2025.8.3b",
    "mikeshardmind-base2048~=1.0.3",
    "msgspec~=0.19.0",
    "pillow~=11.1.0",
    "platformdirs~=4.3.8",
]

[project.urls]
homepage = "https://github.com/trumully/dynamo-v2#readme"
source = "https://github.com/trumully/dynamo-v2"

[tool.uv.sources]
mikeshardmind-async-utils = { git = "https://github.com/mikeshardmind/async-utils" }
dynaconf = { git = "https://github.com/dynaconf/dynaconf" }
discord-py = { git = "https://github.com/Rapptz/discord.py" }
